main page layout

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,6 +9,7 @@
   font-family: $main-font;
   box-sizing: border-box;
   vertical-align: baseline;
+  background-color: transparent;
 }
 
 article, aside, details, figcaption, figure,
@@ -35,4 +36,9 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+.button {
+  cursor: pointer;
+  outline: none;
 }
