--- a/src/pages/TariffList/style.scss
+++ b/src/pages/TariffList/style.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  background: transparentize(#3f51b5, 0.5);
+  background: transparentize($link-color, 0.5);
   border-radius: inherit;
   h2 {
     color: $link-color;
