--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -41,4 +41,14 @@ table {
 .button {
   cursor: pointer;
   outline: none;
+  font-weight: 500;
+  font-size: 0.9em;
+  text-transform: uppercase;
+}
+
+.input {
+  border: solid 1px transparentize($black, 0.7);
+  padding: 9px;
+  border-radius: 5px;
+  outline: none;
 }
