--- a/src/pages/Tariff/style.scss
+++ b/src/pages/Tariff/style.scss
@@ -23,8 +23,19 @@
     text-align: center;
   }
 }
+.tariff-page__active-services {
+  width: 400px;
+  margin: 0 auto 50px;
+  li {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+}
+
 .tariff-page__active-services-title {
   font-weight: 500;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .tariff-page__edit {
